# ChangeLog for games-puzzle/hexamine
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/games-puzzle/cvs-repo/gentoo-x86/games-puzzle/hexamine/ChangeLog,v 1.3 2008/03/28 11:26:45 nyhm Exp $

  28 Mar 2008; Tristan Heaven <nyhm@gentoo.org> hexamine-0.2.1.ebuild:
  Add ~amd64 keyword

*hexamine-0.2.1 (06 Jul 2006)

  06 Jul 2006; Michael Sterrett <mr_bones_@gentoo.org>
  +hexamine-0.2.1.ebuild:
  version bump

*hexamine-0.1.2 (03 Jul 2006)

  03 Jul 2006; Michael Sterrett <mr_bones_@gentoo.org> +metadata.xml,
  +hexamine-0.1.2.ebuild:
  initial commit - ebuild submitted by Leszek via bug #137055
