@@ -1,6 +1,9 @@
 # ChangeLog for games-puzzle/hexamine
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-puzzle/cvs-repo/gentoo-x86/games-puzzle/hexamine/ChangeLog,v 1.3 2008/03/28 11:26:45 nyhm Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/games-puzzle/cvs-repo/gentoo-x86/games-puzzle/hexamine/ChangeLog,v 1.4 2010/01/24 23:11:02 ranger Exp $
+
+  24 Jan 2010; Brent Baude <ranger@gentoo.org> hexamine-0.2.1.ebuild:
+  keyworded ~arch for ppc, bug 295274
 
   28 Mar 2008; Tristan Heaven <nyhm@gentoo.org> hexamine-0.2.1.ebuild:
   Add ~amd64 keyword
